@@ -9,5 +9,13 @@
         <h1>Welcome <%= NAME %></h1>
         <p>Your User ID is <%= ID %></p>
         <p>Role: <%= ROLE %></p>
+        <% for(let index = 0; index < IDarray.length; index++) { %>
+            <hr>
+            <h3>Assignment ID: <%= IDarray[index] %> </h3>
+            <h3>Title: <%= title[index] %></h3>
+            <p>Description: <%= description[index] %></p>
+            <h4>Due Date: <%= dueDate[index] %></h4>
+            <a href="">Submit Assignment <%= IDarray[index] %></a>
+        <% } %>
     </body>
 </html>
